Layout fixes
Fixed the treeline css & some layout problems

--- a/styles/_features.scss
+++ b/styles/_features.scss
@@ -10,6 +10,7 @@
     height: 80px;
     background: transparent url(/assets/treeline-png-white.svg) no-repeat;
     background-position: left -4px bottom 0px;
+    background-size: cover;
     position: absolute;
     bottom: -2px;
     z-index: 1;
