--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -18,6 +18,7 @@
     height: 80px;
     background: transparent url(/assets/treeline-svg.svg) no-repeat;
     background-position: left -4px bottom 0px;
+    background-size: cover;
     position: absolute;
     bottom: -3px;
     z-index: 1;
