--- a/styles/_review.scss
+++ b/styles/_review.scss
@@ -24,6 +24,7 @@
     background: transparent url(/assets/treeline-png-white-reversed.svg)
       no-repeat;
     background-position: left -4px top 0px;
+    background-size: cover;
     position: absolute;
     top: 0px;
     z-index: 1;
