--- a/styles/style.css
+++ b/styles/style.css
@@ -164,6 +164,7 @@ p {
   height: 80px;
   background: transparent url(/assets/treeline-svg.svg) no-repeat;
   background-position: left -4px bottom 0px;
+  background-size: cover;
   position: absolute;
   bottom: -3px;
   z-index: 1;
@@ -286,6 +287,7 @@ p {
   height: 80px;
   background: transparent url(/assets/treeline-png-white.svg) no-repeat;
   background-position: left -4px bottom 0px;
+  background-size: cover;
   position: absolute;
   bottom: -2px;
   z-index: 1;
@@ -440,6 +442,9 @@ p {
   max-width: 1280px;
   background: transparent url(/assets/meistrid-bg.svg) no-repeat;
   position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   background-position: right 0px bottom 0px;
   z-index: 1;
 }
@@ -466,6 +471,7 @@ p {
   height: 80px;
   background: transparent url(/assets/treeline-png-white-reversed.svg) no-repeat;
   background-position: left -4px top 0px;
+  background-size: cover;
   position: absolute;
   top: 0px;
   z-index: 1;
@@ -477,6 +483,7 @@ p {
   height: 80px;
   background: transparent url(/assets/treeline-png-white.svg) no-repeat;
   background-position: left -4px bottom 0px;
+  background-size: cover;
   position: absolute;
   bottom: -2px;
   z-index: 1;
@@ -573,6 +580,7 @@ p {
   height: 80px;
   background: transparent url(/assets/treeline-png-white-reversed.svg) no-repeat;
   background-position: left -4px top 0px;
+  background-size: cover;
   position: absolute;
   top: 0px;
   z-index: 1;
